# farm_manager

./: .env  .env.example  .envrc  .gitignore  CHANGELOG.md  README.md  docstring_coverage_report.txt  mypy_detailed_report.txt  mypy_strict_report.txt  plan_agricola.md  plan_reestructuracion.md  pylint_detailed_report.txt  requirements.txt  setup.cfg  setup.py  test_irrigation_mock.py  test_machinery_optimization.py  test_weather_client.py
docs/: NOTES.md  api_reference.md  architecture.md  cleanup_plan.md  developer_guide.md  enhanced_cleanup_plan.md  farm_manager.calendar.rst  farm_manager.core.rst  farm_manager.irrigation.rst  farm_manager.knowledge.rst  farm_manager.resources.rst  farm_manager.rst  farm_manager.weather.rst  farm_manager.workflows.rst  modules.rst  project_cleanup.md  user_guide.md
farm_manager/: __init__.py  cli.py
knowledge_base/: chroma.sqlite3
resource_data/: personnel.json
scripts/: PERFORMANCE_README.md  README.md  aggressive_code_quality_fixer.py  code_quality_fixer.py  complete_cleanup.py  comprehensive_code_improver.py  enhanced_project_cleanup.py  final_release_preparation.py  final_review_and_release.py  generate_sample_data.py  generate_test_report.py  performance_test.py  populate_knowledge_base.py  project_cleanup.py  run_final_review.sh  run_integration_tests.sh  setup_environment.sh  version_manager.py
src/: irrigation_decision_system.py  irrigation_decision_system_mock.py  irrigation_decision_system_simplified.py  mock_regional_knowledge_base.py  regional_knowledge_base.py  resource_management.py
src_backup/: agricultural_calendar.py  machinery_optimization_demo.py  weather_client.py  (+1 more)
(+55 files in other folders)
