
[metadata]
name = farm-manager
version = attr: farm_manager.__version__
description = Farm management system
long_description = file: README.md
long_description_content_type = text/markdown
author = Agricultural Management Team
author_email = team@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typer==0.9.0
    rich==10.16.2
    pydantic==1.10.13
    requests==2.31.0
    python-dotenv==1.0.0
    numpy==1.26.4
    scikit-learn==1.4.0

[options.entry_points]
console_scripts =
    farm-manager = farm_manager.cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[coverage:run]
source = farm_manager
omit =
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203, W503

[mypy]
python_version = 3.9
warn_return_any = False
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = False
disallow_untyped_decorators = False
no_implicit_optional = False
strict_optional = False
